@@ -56,6 +56,10 @@
 #define T_MAILB		253	
 #define T_ANY		255
 
+#define EDNS0_OPTION_MAC            65001 /* dyndns.org temporary assignment */
+#define EDNS0_OPTION_CLIENT_SUBNET  5     /* IANA */
+
+
 struct dns_header {
   u16 id;
   u8  hb3,hb4;
